--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.firebase:firebase-database:18.0.1'
+    implementation 'com.google.firebase:firebase-storage:18.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.viewpager:viewpager:1.0.0"
+    implementation 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
